--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "author": "Joshua Harms <joshua@nozzlegear.com>",
     "license": "MIT",
     "scripts": {
-        "start": "parcel ./src/index.html"
+        "start": "ts-node ./src/server/index.ts"
     },
     "dependencies": {
         "@nozzlegear/railway": "^2.0.0",
+        "@overnightjs/core": "^1.2.2",
+        "express": "^4.16.4",
+        "got": "^9.2.2",
         "jest": "^23.6.0",
         "react": "^16.5.2",
         "react-dom": "^16.5.2",
@@ -20,7 +23,15 @@
         "webpack": "^4.22.0"
     },
     "devDependencies": {
+        "@types/express": "^4.16.0",
+        "@types/got": "^8.3.4",
         "@types/react": "^16.4.18",
-        "@types/react-dom": "^16.0.9"
+        "@types/react-dom": "^16.0.9",
+        "css-loader": "^1.0.0",
+        "style-loader": "^0.23.1",
+        "stylus": "^0.54.5",
+        "stylus-loader": "^3.0.2",
+        "ts-loader": "^5.2.2",
+        "typescript": "^3.1.3"
     }
 }
