--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
         "module": "commonjs",
         "jsx": "react",
-        "target": "es6",
+        "target": "es5",
+        "lib": ["es2015", "dom"],
         "forceConsistentCasingInFileNames": true,
         "experimentalDecorators": true,
         "noImplicitAny": false,
