--- a/package.json
+++ b/package.json
@@ -6,32 +6,27 @@
     "author": "Joshua Harms <joshua@nozzlegear.com>",
     "license": "MIT",
     "scripts": {
-        "start": "ts-node ./src/server/index.ts"
+        "start": "parcel ./src/client/index.html"
     },
     "dependencies": {
         "@nozzlegear/railway": "^2.0.0",
         "@overnightjs/core": "^1.2.2",
         "express": "^4.16.4",
         "got": "^9.2.2",
-        "jest": "^23.6.0",
         "react": "^16.5.2",
-        "react-dom": "^16.5.2",
-        "ts-jest": "^23.10.4",
-        "ts-node": "^7.0.1",
-        "ts-node-dev": "^1.0.0-pre.30",
-        "typescript-loader": "^1.1.3",
-        "webpack": "^4.22.0"
+        "react-dom": "^16.5.2"
     },
     "devDependencies": {
         "@types/express": "^4.16.0",
         "@types/got": "^8.3.4",
         "@types/react": "^16.4.18",
         "@types/react-dom": "^16.0.9",
-        "css-loader": "^1.0.0",
-        "style-loader": "^0.23.1",
+        "jest": "^23.6.0",
+        "parcel": "1.10.3",
         "stylus": "^0.54.5",
-        "stylus-loader": "^3.0.2",
-        "ts-loader": "^5.2.2",
+        "ts-jest": "^23.10.4",
+        "ts-node": "^7.0.1",
+        "ts-node-dev": "^1.0.0-pre.30",
         "typescript": "^3.1.3"
     }
 }
