--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "dependencies": {
         "@nozzlegear/railway": "^2.0.0",
         "@overnightjs/core": "^1.2.2",
+        "cors": "^2.8.5",
         "express": "^4.16.4",
         "got": "^9.2.2",
         "react": "^16.5.2",
         "react-dom": "^16.5.2"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.4",
         "@types/express": "^4.16.0",
         "@types/got": "^8.3.4",
         "@types/react": "^16.4.18",
